src/test/resources/json/invalid_inputs/invalid_start.json.except
Unrecognized field "Z" (class com.myq.interview.cleaner.data.RobotPosition), not marked as ignorable (4 known properties: "X", "Y", "facing", "position"])